<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="model"
            type="com.jr.census.viewmodel.models.PropertySearchModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textName"
                android:inputType="text"
                android:text="@={model.name}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutName"
            android:id="@+id/layoutSerialNumber"
            android:hint="@string/serial_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textSerialNumber"
                android:inputType="text"
                android:text="@={model.serialNumber}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutSerialNumber"
            android:id="@+id/layoutStreet"
            android:hint="@string/street"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textStreet"
                android:inputType="text"
                android:text="@={model.street}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutStreet"
            android:id="@+id/layoutNumber"
            android:hint="@string/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textNumber"
                android:inputType="number"
                android:text="@={model.number}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutNumber"
            android:id="@+id/layoutInteriorNumber"
            android:hint="@string/interiorNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textInteriorNumber"
                android:inputType="text"
                android:text="@={model.interiorNumber}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>