<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.jr.census.viewmodel.models.PictureData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTitle"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textTitle"
                android:inputType="text"
                android:text="@={model.title}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutTitle"
            android:id="@+id/layoutSubtitle"
            android:hint="@string/subtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textSubtitle"
                android:inputType="text"
                android:text="@={model.subtitle}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/layoutSubtitle"
            android:id="@+id/layoutDescription"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/textDescription"
                android:inputType="textMultiLine"
                android:text="@={model.description}"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>